// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HorizontalProjectCard /> by default matches with snapshot 1`] = `
<a
  className="sc-gsDKAQ jTnea k-HorizontalProjectCard k-HorizontalProjectCard--noProgressOnMobile"
  href="#"
>
  <div
    className="k-HorizontalProjectCard__imageWrapper"
  >
    <img
      alt=""
      src="#image"
    />
  </div>
  <h3
    className="k-u-size-small k-u-weight-500 k-HorizontalProjectCard__title"
  >
    Custom title
  </h3>
  <p
    className="k-u-size-micro k-u-weight-400 k-HorizontalProjectCard__description"
  >
    Custom description
  </p>
  <div
    className="k-HorizontalProjectCard__info"
  >
    <span>
      Test info
    </span>
  </div>
  <div
    className="k-HorizontalProjectCard__progress"
  >
    <div
      aria-label="progression"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="sc-bdvvtL dMgDfH k-Meters-Progress k-HorizontalProjectCard__progress__ramp"
      role="progressbar"
      style={
        Object {
          "--progress-color": "transparent",
          "--progress-value": "0%",
        }
      }
    >
      <div
        className="k-Meters-Progress__ramp"
        style={
          Object {
            "height": 4,
          }
        }
      />
    </div>
    <span
      className="k-u-size-micro k-u-weight-400 k-HorizontalProjectCard__progress__value"
    >
      50
       %
    </span>
  </div>
</a>
`;

exports[`<HorizontalProjectCard /> with noProgress and no info prop matches with snapshot 1`] = `
<a
  className="sc-gsDKAQ jTnea k-HorizontalProjectCard k-HorizontalProjectCard--noBottomLine"
  href="#"
>
  <div
    className="k-HorizontalProjectCard__imageWrapper"
  >
    <img
      alt=""
      src="#image"
    />
  </div>
  <h3
    className="k-u-size-small k-u-weight-regular k-HorizontalProjectCard__title"
  >
    Custom title
  </h3>
  <p
    className="k-u-size-micro k-u-weight-light k-HorizontalProjectCard__description"
  >
    Custom description
  </p>
</a>
`;

exports[`<HorizontalProjectCard /> with noProgress prop matches with snapshot 1`] = `
<a
  className="sc-gsDKAQ jTnea k-HorizontalProjectCard"
  href="#"
>
  <div
    className="k-HorizontalProjectCard__imageWrapper"
  >
    <img
      alt=""
      src="#image"
    />
  </div>
  <h3
    className="k-u-size-small k-u-weight-500 k-HorizontalProjectCard__title"
  >
    Custom title
  </h3>
  <p
    className="k-u-size-micro k-u-weight-400 k-HorizontalProjectCard__description"
  >
    Custom description
  </p>
  <div
    className="k-HorizontalProjectCard__info"
  >
    <span>
      Test info
    </span>
  </div>
</a>
`;
